--- a/index.html
+++ b/index.html
@@ -1,152 +1,257 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>92 Draft Randomizer</title>
-<style>
-* {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-body {
-background-color: black;
-/* We'll let the container do the layout. Body just centers everything vertically. */
-display: flex;
-justify-content: center;
-align-items: flex-start; /* We'll scroll if we exceed viewport height. */
-height: 100vh;
-overflow: auto; /* So we can scroll if there's more content than fits on the screen. */
-}
-/*
-We'll use a flex container so that each image block
-sits side by side until it can't fit, then wraps.
-*/
-.flex-container {
-display: flex;
-flex-wrap: wrap; /* This is key: it wraps to the next line when there's no more horizontal space. */
-justify-content: flex-start; /* Align them from the left to right. */
-align-items: flex-start;
-width: auto;
-padding: 20px; /* Some spacing around the container if you want. */
-gap: 20px; /* Spacing between blocks. Adjust as needed. */
-}
-.image-container {
-position: relative;
-width: 740px; /* Fixed width as per your screenshot */
-height: 560px; /* Fixed height as per your screenshot */
-overflow: hidden;
-background-color: black; /* Just in case, to unify the background. */
-}
-.image-container img {
-width: 100%;
-height: 100%;
-object-fit: contain;
-position: absolute;
-display: none;
-}
-.image-container img.active {
-display: block;
-}
-</style>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>92 Draft Randomizer</title>
+
+    <style>
+
+        * {
+
+            margin: 0;
+
+            padding: 0;
+
+            box-sizing: border-box;
+
+        }
+
+
+
+        body {
+
+            background-color: black;
+
+            display: flex;
+
+            justify-content: center;
+
+            align-items: center;
+
+            height: 100vh;
+
+            overflow: hidden;
+
+        }
+
+
+
+        .grid-container {
+
+            display: flex;
+
+            flex-wrap: wrap;
+
+            justify-content: center;
+
+            align-items: center;
+
+            width: 100vw;
+
+            height: 100vh;
+
+        }
+
+
+
+        .image-container {
+
+            width: 740px;
+
+            height: 560px;
+
+            display: flex;
+
+            justify-content: center;
+
+            align-items: center;
+
+            position: relative;
+
+        }
+
+
+
+        .image-container img {
+
+            max-width: 100%;
+
+            max-height: 100%;
+
+            object-fit: contain;
+
+            position: absolute;
+
+            display: none;
+
+        }
+
+
+
+        .image-container img.active {
+
+            display: block;
+
+        }
+
+    </style>
+
 </head>
+
 <body>
-<!-- Instead of a grid, we use a flex container -->
-<div class="flex-container" id="mainContainer"></div>
 
-<script>
-const imageUrls = [
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
-];
+    <div class="grid-container" id="gridContainer"></div>
 
-// We cycle images at 300ms in your screenshot.
-// If you want it half, set to 150 or whatever you prefer.
-const cycleInterval = 300;
-// A full cycle is 27 images x cycleInterval
-const rotationDuration = 27 * cycleInterval; // 8100ms if cycleInterval = 300
 
-let mainContainer = document.getElementById("mainContainer");
-let blocks = [];
-let nextBlockTimer = null;
 
-// Shuffle
-function shuffleArray(arr) {
-for (let i = arr.length - 1; i > 0; i--) {
-const j = Math.floor(Math.random() * (i + 1));
-[arr[i], arr[j]] = [arr[j], arr[i]];
-}
-}
+    <script>
 
-function createBlock() {
-// shuffle the images
-let shuffled = [...imageUrls];
-shuffleArray(shuffled);
+        const imageUrls = [
 
-// create container
-const blockDiv = document.createElement("div");
-blockDiv.classList.add("image-container");
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
 
-let images = [];
-shuffled.forEach((url, i) => {
-let img = document.createElement("img");
-img.src = url;
-if (i === 0) {
-img.classList.add("active");
-}
-blockDiv.appendChild(img);
-images.push(img);
-});
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
 
-mainContainer.appendChild(blockDiv);
-blocks.push({ container: blockDiv, images: images, index: 0 });
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
 
-startCycle(blocks.length - 1);
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
 
-// schedule next block addition
-if (nextBlockTimer) clearTimeout(nextBlockTimer);
-let delay = (blocks.length < 6) ? rotationDuration : cycleInterval;
-nextBlockTimer = setTimeout(createBlock, delay);
-}
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
 
-function startCycle(blockIndex) {
-let blockObj = blocks[blockIndex];
-setInterval(() => {
-blockObj.images[blockObj.index].classList.remove("active");
-blockObj.index = (blockObj.index + 1) % blockObj.images.length;
-blockObj.images[blockObj.index].classList.add("active");
-}, cycleInterval);
-}
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
 
-// no event listeners for manual addition— purely automatic
-// Just start the first block
-window.onload = createBlock;
-</script>
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+
+            "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+
+        ];
+
+
+
+        const gridContainer = document.getElementById("gridContainer");
+
+        let imageContainers = [];
+
+
+
+        function createImageContainer() {
+
+            let container = document.createElement("div");
+
+            container.classList.add("image-container");
+
+
+
+            let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
+
+            let images = [];
+
+
+
+            shuffledImages.forEach((src, i) => {
+
+                let img = document.createElement("img");
+
+                img.src = src;
+
+                if (i === 0) img.classList.add("active");
+
+                container.appendChild(img);
+
+                images.push(img);
+
+            });
+
+
+
+            gridContainer.appendChild(container);
+
+            imageContainers.push({ container, images, index: 0 });
+
+
+
+            updateGridSize();
+
+            cycleImages(imageContainers.length - 1);
+
+        }
+
+
+
+        function cycleImages(containerIndex) {
+
+            let imageSet = imageContainers[containerIndex];
+
+            setInterval(() => {
+
+                imageSet.images[imageSet.index].classList.remove("active");
+
+                imageSet.index = (imageSet.index + 1) % imageSet.images.length;
+
+                imageSet.images[imageSet.index].classList.add("active");
+
+            }, 300);
+
+        }
+
+
+
+        function startAutoAdding() {
+
+            setInterval(createImageContainer, 2000);
+
+        }
+
+
+
+        window.addEventListener("load", startAutoAdding);
+
+    </script>
+
 </body>
+
 </html>
