--- a/index.html
+++ b/index.html
@@ -1,144 +1,273 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>92 Draft Randomizer</title>
+
     <style>
+
         * {
+
             margin: 0;
+
             padding: 0;
+
             box-sizing: border-box;
+
         }
+
+
 
         body {
+
             background-color: black;
+
             display: flex;
+
             justify-content: center;
+
             align-items: center;
+
             height: 100vh;
+
             overflow: hidden;
+
         }
+
+
 
         .grid-container {
+
             display: flex;
+
             flex-wrap: wrap;
+
             justify-content: center;
+
             align-items: center;
+
             width: 100vw;
+
             height: 100vh;
+
         }
+
+
 
         .image-container {
+
             width: 740px;
+
             height: 560px;
+
             display: flex;
+
             justify-content: center;
+
             align-items: center;
+
             position: relative;
+
         }
+
+
 
         .image-container img {
+
             max-width: 100%;
+
             max-height: 100%;
+
             object-fit: contain;
+
             position: absolute;
+
             display: none;
+
         }
+
+
 
         .image-container img.active {
+
             display: block;
+
         }
+
     </style>
+
 </head>
+
 <body>
+
     <div class="grid-container" id="gridContainer"></div>
 
+
+
     <script>
+
         const imageUrls = [
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+
             "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+
         ];
 
+
+
         const gridContainer = document.getElementById("gridContainer");
+
         let imageContainers = [];
 
+
+
         function createImageContainer() {
+
             let container = document.createElement("div");
+
             container.classList.add("image-container");
 
+
+
             let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
+
             let images = [];
 
+
+
             shuffledImages.forEach((src, i) => {
+
                 let img = document.createElement("img");
+
                 img.src = src;
+
                 if (i === 0) img.classList.add("active");
+
                 container.appendChild(img);
+
                 images.push(img);
+
             });
+
+
 
             gridContainer.appendChild(container);
+
             imageContainers.push({ container, images, index: 0 });
 
+
+
             updateGridSize();
+
             cycleImages(imageContainers.length - 1);
+
         }
+
+
 
         function cycleImages(containerIndex) {
+
             let imageSet = imageContainers[containerIndex];
+
             setInterval(() => {
+
                 imageSet.images[imageSet.index].classList.remove("active");
+
                 imageSet.index = (imageSet.index + 1) % imageSet.images.length;
+
                 imageSet.images[imageSet.index].classList.add("active");
+
             }, 300);
+
         }
+
+
 
         function updateGridSize() {
+
             let numContainers = imageContainers.length;
+
             let gridSize = Math.ceil(Math.sqrt(numContainers));
+
             let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
 
+
+
             imageContainers.forEach(({ container }) => {
+
                 container.style.width = `${newSize}px`;
+
                 container.style.height = `${(newSize / 740) * 560}px`;
+
             });
+
         }
 
-        document.addEventListener("keydown", (event) => {
-            if (event.key === "Enter") {
-                createImageContainer();
-            }
-        });
+
 
         window.addEventListener("resize", updateGridSize);
 
-        createImageContainer();
+        setInterval(createImageContainer, 2000);
+
     </script>
+
 </body>
+
 </html>
