--- a/index.html
+++ b/index.html
@@ -1,156 +1,345 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>92 Draft Randomizer</title>
+
 <style>
+
 * {
+
 margin: 0;
+
 padding: 0;
+
 box-sizing: border-box;
+
 }
+
+
+
 body {
+
 background-color: black;
+
 display: flex;
+
 justify-content: center;
+
 align-items: center;
+
 height: 100vh;
+
 overflow: hidden;
+
 }
-/* Use flex layout as approved; allow vertical scrolling on mobile */
+
+
+
 .grid-container {
+
 display: flex;
+
 flex-wrap: wrap;
+
 justify-content: center;
+
 align-items: center;
+
 width: 100vw;
+
 height: 100vh;
-overflow-y: auto; /* allow scrolling if content exceeds viewport height */
+
 }
+
+
+
 .image-container {
+
 width: 740px;
+
 height: 560px;
+
 display: flex;
+
 justify-content: center;
+
 align-items: center;
+
 position: relative;
+
 }
+
+
+
 .image-container img {
+
 max-width: 100%;
+
 max-height: 100%;
+
 object-fit: contain;
+
 position: absolute;
+
 display: none;
+
 }
+
+
+
 .image-container img.active {
+
 display: block;
+
 }
+
 </style>
+
 </head>
+
 <body>
-<!-- Audio element remains (autoplay will be triggered after user interaction) -->
+
+<!-- Audio element with workaround for autoplay -->
+
 <audio id="background-audio" autoplay loop muted>
+
 <source src="draft_engine_audio.mp3" type="audio/mp3">
+
 Your browser does not support the audio element.
+
 </audio>
+
+
 
 <div class="grid-container" id="gridContainer"></div>
 
+
+
 <script>
+
 const imageUrls = [
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/01_shaquille_oneal.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/02_alonzo_mourning.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/03_christian_laettner.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/04_jim_jackson.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/05_laphonso_ellis.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/06_tom_gugliotta.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/07_walt_williams.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/08_todd_day.jpg",
+
 "https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/09_clarence_weatherspoon.jpg",
-"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg"
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/10_adam_keefe.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/11_robert_horry.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/12_harold_miner.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/13_bryant_stith.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/14_malik_sealy.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/15_anthony_peeler.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/16_randy_woods.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/17_doug_christie.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/18_tracy_murray.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/19_don_maclean.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/20_hubert_davis.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/21_jon_barry.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/22_oliver_miller.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/23_lee_mayberry.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/24_latrell_sprewell.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/25_elmore_spencer.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/26_dave_johnson.jpg",
+
+"https://raw.githubusercontent.com/filkfilkommen/draft_randomizer/main/27_byron_houston.jpg"
+
 ];
 
+
+
 const gridContainer = document.getElementById("gridContainer");
-let imageBlocks = []; // Array of { container, images, index }
 
-const cycleInterval = 150;
-const rotationDuration = 27 * cycleInterval;
+let imageContainers = [];
 
-let accelerate = false;
+let autoGenerateInterval;
 
-function createImageBlock() {
+let fastGenerate = false;
+
+
+
+function createImageContainer() {
+
 let container = document.createElement("div");
+
 container.classList.add("image-container");
 
+
+
 let shuffledImages = [...imageUrls].sort(() => Math.random() - 0.5);
-let imgs = [];
+
+let images = [];
+
+
+
 shuffledImages.forEach((src, i) => {
+
 let img = document.createElement("img");
+
 img.src = src;
-if (i === 0) img.classList.add("active");
+
+if (i === 0) img.classList.add("active"); // First image starts immediately animated
+
 container.appendChild(img);
-imgs.push(img);
+
+images.push(img);
+
 });
 
+
+
 gridContainer.appendChild(container);
-imageBlocks.push({ container, images: imgs, index: 0 });
 
-startCycle(imageBlocks.length - 1);
+imageContainers.push({ container, images, index: 0 });
+
+
+
+updateGridSize();
+
+cycleImages(imageContainers.length - 1);
+
 }
 
-function startCycle(blockIndex) {
-let blockObj = imageBlocks[blockIndex];
+
+
+function cycleImages(containerIndex) {
+
+let imageSet = imageContainers[containerIndex];
+
 setInterval(() => {
-blockObj.images[blockObj.index].classList.remove("active");
-blockObj.index = (blockObj.index + 1) % blockObj.images.length;
-blockObj.images[blockObj.index].classList.add("active");
-}, cycleInterval);
+
+imageSet.images[imageSet.index].classList.remove("active");
+
+imageSet.index = (imageSet.index + 1) % imageSet.images.length;
+
+imageSet.images[imageSet.index].classList.add("active");
+
+}, 300);
+
 }
 
-function autoAddBlock() {
-createImageBlock();
-let delay = accelerate ? cycleInterval : rotationDuration;
-setTimeout(autoAddBlock, delay);
+
+
+function updateGridSize() {
+
+let numContainers = imageContainers.length;
+
+let gridSize = Math.ceil(Math.sqrt(numContainers));
+
+let newSize = Math.min(window.innerWidth / gridSize, window.innerHeight / gridSize);
+
+
+
+imageContainers.forEach(({ container }) => {
+
+container.style.width = `${newSize}px`;
+
+container.style.height = `${(newSize / 740) * 560}px`;
+
+});
+
 }
 
-let autoStarted = false;
-function startAutoGeneration() {
-if (!autoStarted) {
-const audio = document.getElementById("background-audio");
-if (audio) audio.muted = false;
-autoStarted = true;
-autoAddBlock();
-}
+
+
+function startGeneration() {
+
+if (!autoGenerateInterval) {
+
+autoGenerateInterval = setInterval(createImageContainer, 2000);
+
 }
 
-function startAccelerate(e) {
-if ((e.type === "keydown" && e.key === "Enter") || e.type === "mousedown" || e.type === "touchstart") {
-accelerate = true;
-}
-}
-function stopAccelerate(e) {
-if (e.type === "keyup" || e.type === "mouseup" || e.type === "touchend") {
-accelerate = false;
-}
 }
 
-document.addEventListener("keydown", startAccelerate);
-document.addEventListener("keyup", stopAccelerate);
-document.addEventListener("mousedown", startAccelerate);
-document.addEventListener("mouseup", stopAccelerate);
-document.addEventListener("touchstart", startAccelerate);
-document.addEventListener("touchend", stopAccelerate);
 
-function initiateOnInteraction(e) {
-startAutoGeneration();
-document.removeEventListener("click", initiateOnInteraction);
-document.removeEventListener("keydown", initiateOnInteraction);
-document.removeEventListener("touchstart", initiateOnInteraction);
+
+document.body.addEventListener("click", () => {
+
+document.getElementById("background-audio").muted = false;
+
+startGeneration();
+
+});
+
+
+
+document.addEventListener("keydown", (event) => {
+
+if (event.key === "Enter") {
+
+createImageContainer();
+
+fastGenerate = true;
+
+clearInterval(autoGenerateInterval);
+
+autoGenerateInterval = setInterval(createImageContainer, 500);
+
 }
-document.addEventListener("click", initiateOnInteraction);
-document.addEventListener("keydown", initiateOnInteraction);
-document.addEventListener("touchstart", initiateOnInteraction);
+
+});
+
+
+
+document.addEventListener("keyup", (event) => {
+
+if (event.key === "Enter") {
+
+fastGenerate = false;
+
+clearInterval(autoGenerateInterval);
+
+autoGenerateInterval = setInterval(createImageContainer, 2000);
+
+}
+
+});
+
+
+
+window.addEventListener("resize", updateGridSize);
+
+createImageContainer();
+
 </script>
+
 </body>
+
 </html>
